# demo-app

./: README.md  pyproject.toml
numpy-app/: README.md  pyproject.toml
numpy-app/numpy_app/: __init__.py  client_app.py  server_app.py
pytorch-app/: README.md  pyproject.toml
pytorch-app/pytorch_app/: client_app.py  server_app.py  task.py
pytorch_app/: __init__.py  client_app.py  task.py
quickstart-docker/: pyproject.toml
quickstart-docker/quickstart_docker/: client_app.py  server_app.py  task.py
scikit-app/: README.md  pyproject.toml
scikit-app/scikit_app/: __init__.py  client_app.py  server_app.py
