[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-app"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.11.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "demo"

[tool.flwr.app.components]
serverapp = "pytorch_app.server_app:app"
clientapp = "pytorch_app.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
fraction-fit = 1.0
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2

[tool.flwr.federations.raspberry-pi-cluster]
address = "192.168.1.90:9093"
insecure = true
