[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-docker"
version = "15.2.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "transformers>=4.30.0,<5.0",
    "evaluate>=0.4.0,<1.0",
    "datasets>=2.0.0, <3.0",
    "scikit-learn>=1.3.1, <2.0",
    "pandas>=2.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flower"

[tool.flwr.app.components]
serverapp = "quickstart_docker.server_app:app"
clientapp = "quickstart_docker.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
fraction-fit = 1.0
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2

[tool.flwr.federations.raspberry-pi-cluster]
address = "192.168.1.90:9093"
insecure = true
