[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scikit-app"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr-datasets[vision]>=0.3.0",
    "scikit-learn>=1.3.1, <2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "demo"

[tool.flwr.app.components]
serverapp = "scikit_app.server_app:app"
clientapp = "scikit_app.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
fraction-fit = 1.0
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2

[tool.flwr.federations.raspberry-pi-cluster]
address = "192.168.1.90:9093"
insecure = true
